# Twinder

./: .env.example  .env.local.example  .gitignore  AgentMatch_PRD.md  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  README.org  docker-compose.yml  next.config.ts  profile.yaml  pyproject.toml
.next/: fallback-build-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/dev/: lock  prerender-manifest.json  trace
.next/diagnostics/: route-bundle-stats.json
.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
.next/standalone/: server.js
.next/types/: validator.ts
Docs/: Frontend_Backend_Integration.md  Twinder_PRD.md  twinder_developer_handoff_v0_3.json  twinder_mvp_ux_product_spec_v0_3.md  twinder_visual_brand_guidelines_v0_1.md
Docs/plans/: 2026-06-06-prd-frontend-demo-gaps.md  2026-06-06-ux-overhaul.md  2026-06-06-weave-llm-integration.md  (+3 more)
Prompts/: intake.md  synthesis.md  twinder-final-combined.yaml
Templates/: matching_feature_vector.yaml  profile.yaml
app/: README.md  config.py  database.py  deps.py  globals.css  llm.py  main.py  models.py  observability.py  page.tsx  redis_client.py  schemas.py  seed.py
deploy/: README.md  install.sh
frontend/: .env.local.example  .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
lib/: local-store.ts  mock-api.ts  mock-data.ts  redis.ts
tests/: conftest.py  test_integration.py  test_llm.py  test_twin_prompt.py
types/: index.ts
(+630 files in other folders)
