[project]
name = "twinder-backend"
version = "0.1.0"
description = "Digital twins for agent-to-agent networking"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "anthropic>=0.40.0",
    "litellm>=1.40.0",
    "openai>=1.30.0",
    "redis[hiredis]>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
